# BazzarKlineDataFetcher

./: .gitignore  api_helpers.py  api_parser.py  api_routes.py  api_routes_alerts.py  cache_manager.py  check_imports.py  config.py  debug-bybit-volume.ts  debug-fetch-coins.ts  main.py  memory-store.ts  package-lock.json  package.json  pyproject.toml  redis-store.ts  remarks.md  remarks.txt  render.yaml  requirements.txt  server.ts  test-api.ts  test-run-jobs.ts  test_12h_render_endpoint.py  test_1h_render_endpoint.py  test_alerts.py  test_cache_freshness.py  test_coin_sifter.py  test_direct_fetcher.py  test_redis.py  test_render_endpoints.py  tests_e2e.py  tsconfig.json  url_builder.py  verify-1h-job-local.ts
alert_manager/: checker.py  model.py  telegram_sender.py
alert_tests/: helpers.py  test_1_e2e_lifecycle.py  test_2_api_management.py  test_3_api_cleanup.py  test_4_api_uniqueness.py  test_5_e2e_1h_alerts.py
core/: config.ts  types.ts
core/fetchers/: coin-fetcher.ts  fr-fetchers.ts  kline-fetchers.ts  oi-fetchers.ts
core/getters/: get-binance-oi.ts  get-bybit-oi.ts  get-fr.ts  (+1 more)
data_collector/: __init__.py  aggregation_target.py  data_processing.py  direct_fetcher.py  direct_fetcher_new.py  fetch_strategies.py  fr_fetcher.py  task_builder.py  test_main_orchestrator.py
jobs/: job-12h.ts  job-1d.ts  job-1h.ts  job-4h.ts  job-8h.ts
store/: memory-store.ts  redis-store.ts  store.ts
tests_e2e/: helpers.py  test_1_e2e_flow.py  test_2_cache_freshness.py  test_3_deep_integration.py  test_4_cache_consistency.py  test_5_1h_cache_check.py  test_main_orchestrator.py
(+5 files in other folders)
